# monitorhosts

./: Cargo.toml  README.md  build.rs
.github/workflows/: build.yml  ci.yml
doc/: design.drawio
resources/: resources.rc
resources/ui/: add-dialog.slint  app.slint  window.slint
resources/ui/dialogs/: confirm.slint  host-config.slint
src/: app.rs  args.rs  hotkey.rs  logging.rs  main.rs  manager.rs  tray.rs
src/app/: dialog.rs  window.rs
src/controllers/: monitor.rs
src/tray/: mod.rs
