[package]
name = "monitorhosts"
version = "0.1.0"
edition = "2021"

[dependencies]
arboard = { version = "3.4.0", default-features = false }
clap = { version = "4.5.17", features = ["color", "derive", "std"], default-features = false }
env_logger = "0.11.5"
global-hotkey = "0.6.0"
log = "0.4.22"
slint = "1.7.2"
tray-item = "0.10.0"
url = "2.5.2"

[build-dependencies]
embed-resource = "2.4.3"
slint-build = "1.7.2"
