[package]
name = "monitorhosts"
version = "0.1.0"
edition = "2021"

[dependencies]
arboard = { version = "3.4.0", default-features = false }
clap = { version = "4.5.17", features = ["color", "derive", "std"], default-features = false }
dirs = "5.0.1"
env_logger = "0.11.5"
global-hotkey = "0.6.0"
log = "0.4.22"
rand = "0.8.5"
serde = "1.0.210"
serde_json = "1.0.128"
slint = "1.7.2"
surge-ping = "0.8.1"
tokio = { version = "1.40.0", default-features = false, features = ["rt", "rt-multi-thread"] }
tray-item = "0.10.0"
url = "2.5.2"

[build-dependencies]
embed-resource = "2.4.3"
slint-build = "1.7.2"
